--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,186 @@
   box-sizing: border-box;
 }
 
+:root {
+  /* COLORS */
+  /* LIGHT MODE */
+  --background-light: #fff;
+  --blue-dark-0: #2b2936;
+  --blue-dark-1: #3a3847;
+  --gray-dark: #5e5e5e;
+  --gray: #808080;
+  --gray-light: #999999;
+  /* DARK MODE */
+  --backgroung-dark: #2a2a2a;
+  /* ELSE */
+  --orange: #ff754e;
+  --orange-light-0: #ffcccc;
+  --orange-light-1: #ffe5d4;
+  --orange-light-2: #fff9f4;
+  --blue: #c8dee6;
+  --blue-light: #f5f9fa;
+}
+
 body {
   padding: 0 2rem;
   margin: 0 auto;
   user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
   max-width: 1800px;
+  overflow-x: hidden;
   font-family: "Poppins", sans-serif;
-  background-color: aquamarine;
+}
+
+/* nav */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.3rem 0;
+}
+
+.nav-container__left {
+  display: flex;
+  align-items: center;
+}
+
+.nav-logo {
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 2rem;
+  cursor: pointer;
+  color: var(--orange);
+}
+
+.nav-links {
+  font-size: 0.8rem;
+  margin-left: 20px;
+  color: var(--gray-dark);
+  position: relative;
+  top: 6px;
+}
+
+.nav-link {
+  cursor: pointer;
+  transition: color 0.1s ease;
+}
+.nav-link:hover {
+  color: #000;
+}
+
+/* menu logic */
+.menu-expanded {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  padding: 0.52rem 4rem;
+  max-width: 1800px;
+  background-color: var(--background-light);
+  transition: background-color 0.3s ease;
+  z-index: 99;
+}
+.menu-list__hidden {
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
+.menu-list__expanded {
+  display: flex;
+  flex-direction: column;
+  align-items: right;
+  justify-content: center;
+  height: 95%;
+  list-style: none;
+  text-align: right;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: var(--blue-dark-1);
+  transform: translateX(-40px);
+}
+.menu-list-item__hidden {
+  opacity: 0;
+}
+.menu-list-item__visible {
+  opacity: 1;
+  margin: 1rem 0;
+  transform: translateX(40px);
+}
+.menu-list-item__visible:nth-child(1) {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+.menu-list-item__visible:nth-child(2) {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition-delay: 0.15s;
+}
+.menu-list-item__visible:nth-child(3) {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition-delay: 0.3s;
+}
+.menu-list-item__visible:nth-child(4) {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition-delay: 0.45s;
+}
+.menu-list-item__visible:nth-child(5) {
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition-delay: 0.6s;
+}
+/* menu logic */
+
+.nav-container__right {
+  display: flex;
+}
+
+.menu-button {
+  border: none;
+  width: 35px;
+  height: 40px;
+  min-height: 40px;
+  cursor: pointer;
+  background-color: transparent;
+  position: relative;
+}
+.menu-button::before,
+.menu-button::after {
+  content: "";
+  display: inline-block;
+  background-color: var(--blue-dark-1);
+  width: 30px;
+  height: 4px;
+  border-radius: 5px;
+  transition: all 0.5s ease;
+}
+.menu-button::before {
+  position: relative;
+  top: 2.5px;
+}
+.menu-button::after {
+  position: relative;
+  bottom: 2.5px;
+}
+
+.open::before {
+  transform: translateY(5.5px) rotate(45deg);
+}
+.open::after {
+  transform: translateY(-5px) rotate(-45deg);
+}
+
+.menu-item__btn {
+  cursor: pointer;
+  font-family: "Poppins";
+  font-size: 1.4rem;
+  font-weight: 600;
+  background-color: transparent;
+  border: none;
+  color: var(--blue-dark-1);
+  transition: color 0.1s ease;
+}
+
+.menu-item__btn:hover {
+  color: var(--orange);
 }
