--- a/styles.css
+++ b/styles.css
@@ -565,3 +565,36 @@ nav {
     width: 43%;
   }
 }
+/* projects */
+
+/* skills */
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  list-style: none;
+  margin: 3rem;
+}
+
+.skills-grid li {
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.skills-grid i {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.skills-grid svg {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 0.7rem;
+}
+
+.skills-grid h3 {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
