--- a/styles.css
+++ b/styles.css
@@ -598,3 +598,119 @@ nav {
   font-size: 0.9rem;
   font-weight: 500;
 }
+/* skills */
+
+/* contact */
+.contact {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.contact aside {
+  position: absolute;
+  right: -1rem;
+  bottom: -3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.contact aside button {
+  width: 20px;
+  height: 20px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 13px;
+  background-color: transparent;
+}
+
+.contact aside svg {
+  fill: var(--gray);
+  transition: all 0.1s ease;
+}
+
+.contact aside svg:hover {
+  fill: var(--orange);
+}
+
+.contact-container {
+  margin: 3rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  width: 50rem;
+  position: relative;
+}
+
+.contact-container img {
+  width: 9rem;
+  position: absolute;
+  top: -52px;
+  left: 80px;
+}
+
+.contact-container__helper {
+  background-color: var(--orange-light-1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 13rem;
+  border-radius: 10px;
+  padding: 2rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.contact-container__helper svg {
+  position: absolute;
+  bottom: -10px;
+  z-index: -1;
+}
+
+.helper {
+  width: 60%;
+  margin: 0 auto;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-text h2 {
+  color: var(--blue-dark-1);
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.contact-text p {
+  color: #6c6a75;
+}
+
+.contact-button {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-button button {
+  padding: 0.8rem 2.5rem;
+  border: 2px solid var(--orange);
+  border-radius: 7px;
+  background-color: var(--orange);
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.contact-button button:hover {
+  background-color: transparent;
+  color: var(--orange);
+}
