feat: paper plane animation by contact section

--- a/styles.css
+++ b/styles.css
@@ -714,6 +714,47 @@ nav {
   background-color: transparent;
   color: var(--orange);
 }
+
+.plane-shadow {
+  fill: #999999;
+  opacity: 0.5;
+}
+
+.plane-white {
+  fill: #ffffff;
+}
+
+.plane-darkblue {
+  fill: #233752;
+}
+
+.plane {
+  width: 70px;
+  position: absolute;
+  top: -1.5rem;
+  left: 0rem;
+  transform: rotate(30deg);
+  offset-path: path(
+    "M 9.8370773,248.11292 C -5.786188,189.11795 18.927279,121.7499 52.464406,88.533686 88.50033,52.842587 175.90801,34.984499 239.36886,93.998738 357.70106,204.03959 319.63579,347.48299 432.83135,372.71588 557.40183,400.48442 602.54694,324.17077 608.80572,241.55487 611.53824,205.48559 591.17836,104.71463 472.58953,101.78642 390.97001,99.771055 311.21943,176.85673 344.29766,277.62415 376.54962,384.42164 457.92091,389.00321 539.94618,390.20402 657.00746,391.91774 818.66334,415.34321 942.17329,341.01864 1065.6832,266.69406 1232.83,17.497249 832.87244,18.581144 429.55232,19.674152 360.23722,366.67261 215.32267,386.92499 86.944989,404.86628 32.173145,332.45609 9.8370773,248.11292 Z"
+  );
+  animation: fly 18s linear infinite;
+  z-index: 10;
+}
+
+@media screen and (min-width: 1400px) {
+  .plane {
+    left: 17rem;
+  }
+}
+
+@keyframes fly {
+  0% {
+    offset-distance: 0%;
+  }
+  100% {
+    offset-distance: 100%;
+  }
+}
 /* contact */
 
 /* footer */
